[package]
name = "http_get_request"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11" }  
tokio = { version = "1", features = ["full"] }
[profile.release]
# Yayın (release) modunda yapılan derlemeler için optimizasyonlar
lto = true  # Link Zamanı Optimizasyonu (Link Time Optimization)
opt-level = 3  # En yüksek optimizasyon seviyesi
